Create final XGBoost models

--- a/Sapplementary_materials/01_biomass_processing/01_output_data/Other_authors_LN_output_XGB_biomass.ipynb
+++ b/Sapplementary_materials/01_biomass_processing/01_output_data/Other_authors_LN_output_XGB_biomass.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# ***Estimation of GS and component biomass for forest sites which created 2020 and 2021***\n"
+    "# ***Estimation of GS and component biomass for forest sites which created 2020 and 2021 based on full data colection ***\n"
    ]
   },
   {
@@ -241,8 +241,8 @@
    ],
    "source": [
     "# Load forest sites dataset\n",
-    "site_data = '/home/dima/Desktop/JupyterLab/GIS and ML algoritms/1_Estimation of tree biomass/Est_biomass_use_LN/LN_output_dataset/Other_authors/all_biomass_other_authors.xlsx'\n",
-    "df = pd.read_excel(site_data, sheet_name='output')\n",
+    "site_data = './output_other_authors_sites_biomass_20230125.xlsx'\n",
+    "df = pd.read_excel(site_data, sheet_name='output_2')\n",
     "df.head()"
    ]
   },
@@ -738,11 +738,21 @@
     "xgb_model_stemBark = xgb.XGBRegressor()\n",
     "xgb_model_br = xgb.XGBRegressor()\n",
     "xgb_model_f = xgb.XGBRegressor()\n",
-    "xgb_model_GS.load_model('/home/dima/Desktop/JupyterLab/GIS and ML algoritms/1_Estimation of tree biomass/Est_biomass_use_LN/LN_output_dataset/xgb_model_LN_GS.json')\n",
-    "xgb_model_allStem.load_model('/home/dima/Desktop/JupyterLab/GIS and ML algoritms/1_Estimation of tree biomass/Est_biomass_use_LN/LN_output_dataset/xgb_model_LN_M_all_stem.json')\n",
-    "xgb_model_stemBark.load_model('/home/dima/Desktop/JupyterLab/GIS and ML algoritms/1_Estimation of tree biomass/Est_biomass_use_LN/LN_output_dataset/xgb_model_LN_M_stem_bark.json')\n",
-    "xgb_model_br.load_model('/home/dima/Desktop/JupyterLab/GIS and ML algoritms/1_Estimation of tree biomass/Est_biomass_use_LN/LN_output_dataset/xgb_model_LN_M_branch.json')\n",
-    "xgb_model_f.load_model('/home/dima/Desktop/JupyterLab/GIS and ML algoritms/1_Estimation of tree biomass/Est_biomass_use_LN/LN_output_dataset/xgb_model_LN_M_foliage.json')"
+    "xgb_model_LN_GS = xgb.XGBRegressor()\n",
+    "xgb_model_LN_allStem = xgb.XGBRegressor()\n",
+    "xgb_model_LN_stemBark = xgb.XGBRegressor()\n",
+    "xgb_model_LN_br = xgb.XGBRegressor()\n",
+    "xgb_model_LN_f = xgb.XGBRegressor()\n",
+    "xgb_model_GS.load_model('./XGBoost_models/01_CS_other_authors_XGB_model.json')\n",
+    "xgb_model_allStem.load_model('./XGBoost_models/02_M_all_stem_other_authors_XGB_model.json')\n",
+    "xgb_model_stemBark.load_model('./XGBoost_models/03_M_stem_bark_other_authors_XGB_model.json')\n",
+    "xgb_model_br.load_model('./XGBoost_models/04_M_branch_other_authors_XGB_model.json')\n",
+    "xgb_model_f.load_model('./XGBoost_models/05_M_foliage_other_authors_XGB_model.json')\n",
+    "xgb_model_LN_GS.load_model('./XGBoost_models/01_LN_CS_other_authors_XGB_model.json')\n",
+    "xgb_model_LN_allStem.load_model('./XGBoost_models/02_LN_M_all_stem_other_authors_XGB_model.json')\n",
+    "xgb_model_LN_stemBark.load_model('./XGBoost_models/03_LN_M_stem_bark_other_authors_XGB_model.json')\n",
+    "xgb_model_LN_br.load_model('./XGBoost_models/04_LN_M_branch_other_authors_XGB_model.json')\n",
+    "xgb_model_LN_f.load_model('./XGBoost_models/05_LN_M_foliage_other_authors_XGB_model.json')"
    ]
   },
   {
@@ -817,7 +827,12 @@
     "print(xgb_model_allStem)\n",
     "print(xgb_model_stemBark)\n",
     "print(xgb_model_br)\n",
-    "print(xgb_model_f)"
+    "print(xgb_model_f)\n",
+    "print(xgb_model_LN_GS)\n",
+    "print(xgb_model_LN_allStem)\n",
+    "print(xgb_model_LN_stemBark)\n",
+    "print(xgb_model_LN_br)\n",
+    "print(xgb_model_LN_f)"
    ]
   },
   {
@@ -844,7 +859,12 @@
     "pred_allStem = xgb_model_allStem.predict(X, ntree_limit=xgb_model_allStem.best_ntree_limit)\n",
     "pred_stemBark = xgb_model_stemBark.predict(X, ntree_limit=xgb_model_stemBark.best_ntree_limit)\n",
     "pred_br = xgb_model_br.predict(X, ntree_limit=xgb_model_br.best_ntree_limit)\n",
-    "pred_f = xgb_model_f.predict(X, ntree_limit=xgb_model_f.best_ntree_limit)"
+    "pred_f = xgb_model_f.predict(X, ntree_limit=xgb_model_f.best_ntree_limit)\n",
+    "pred_LN_GS = xgb_model_LN_GS.predict(X, ntree_limit=xgb_model_GS.best_ntree_limit)\n",
+    "pred_LN_allStem = xgb_model_LN_allStem.predict(X, ntree_limit=xgb_model_allStem.best_ntree_limit)\n",
+    "pred_LN_stemBark = xgb_model_LN_stemBark.predict(X, ntree_limit=xgb_model_stemBark.best_ntree_limit)\n",
+    "pred_LN_br = xgb_model_LN_br.predict(X, ntree_limit=xgb_model_br.best_ntree_limit)\n",
+    "pred_LN_f = xgb_model_LN_f.predict(X, ntree_limit=xgb_model_f.best_ntree_limit)"
    ]
   },
   {
@@ -856,11 +876,11 @@
    "source": [
     "# Convert predicted parameters to real values\n",
     "\n",
-    "R_pred_GS = np.exp(pred_GS)\n",
-    "R_pred_allStem = np.exp(pred_allStem)\n",
-    "R_pred_stemBark = np.exp(pred_stemBark)\n",
-    "R_pred_br = np.exp(pred_br)\n",
-    "R_pred_f = np.exp(pred_f)"
+    "R_pred_GS = np.exp(pred_LN_GS)\n",
+    "R_pred_allStem = np.exp(pred_LN_allStem)\n",
+    "R_pred_stemBark = np.exp(pred_LN_stemBark)\n",
+    "R_pred_br = np.exp(pred_LN_br)\n",
+    "R_pred_f = np.exp(pred_LN_f)"
    ]
   },
   {
@@ -870,7 +890,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {'Ln_xgb_GS':pred_GS, 'Ln_xgb_allStem':pred_allStem, 'Ln_xgb_stemBark':pred_stemBark, 'Ln_xgb_branch':pred_br, 'Ln_xgb_foliage':pred_f, 'T_ln_xgb_GS':R_pred_GS, 'T_ln_xgb_allStem':R_pred_allStem, 'T_ln_xgb_stemBark':R_pred_stemBark, 'T_ln_xgb_branch':R_pred_br, 'T_ln_xgb_foliage':R_pred_f}"
+    "data = {'xgb_GS_ver2':pred_GS, 'xgb_allStem_ver2':pred_allStem, 'xgb_stemBark_ver2':pred_stemBark, 'xgb_branch_ver2':pred_br, 'xgb_foliage_ver2':pred_f, 'T_ln_xgb_GS_ver2':R_pred_GS, 'T_ln_xgb_allStem_ver2':R_pred_allStem, 'T_ln_xgb_stemBark_ver2':R_pred_stemBark, 'T_ln_xgb_branch_ver2':R_pred_br, 'T_ln_xgb_foliage_ver2':R_pred_f}"
    ]
   },
   {
@@ -1156,8 +1176,11 @@
    "source": [
     "# Calculating the sum of above-ground biomass using the XGBoost algorithm\n",
     "\n",
-    "sum_biomass = df['T_ln_xgb_allStem'] + df['T_ln_xgb_branch'] + df['T_ln_xgb_foliage']\n",
-    "df['T_ln_xgb_Ab_g'] = sum_biomass"
+    "sum_biomass = df['xgb_allStem'] + df['xgb_branch'] + df['xgb_foliage']\n",
+    "df['T_ln_xgb_Ab_g'] = sum_biomass\n",
+    "\n",
+    "ln_sum_biomass = df['T_ln_xgb_allStem_ver2'] + df['T_ln_xgb_branch_ver2'] + df['T_ln_xgb_foliage_ver2']\n",
+    "df['T_ln_xgb_Ab_g_ver2'] = ln_sum_biomass"
    ]
   },
   {
@@ -1169,16 +1192,8 @@
    "source": [
     "# Save new dataframe with predict values to .xlsx-file\n",
     "\n",
-    "df.to_excel('/home/dima/Desktop/JupyterLab/GIS and ML algoritms/1_Estimation of tree biomass/Est_biomass_use_LN/LN_output_dataset/Other_authors/LN_other_authors_sites_biomass.xlsx', sheet_name='output', index=False)"
+    "df.to_excel('./Est_biomass_use_final_models_10052023.xlsx', sheet_name='output', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94055b36-600a-4a24-8498-bc3d5a50e71c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
