Fixed jupyter notwbooks from biomass section

--- a/Sapplementary_materials/02_above_ground_measurments_for_RN/02_estimation_unc/03_xgb_LN_Tag_Cs.ipynb
+++ b/Sapplementary_materials/02_above_ground_measurments_for_RN/02_estimation_unc/03_xgb_LN_Tag_Cs.ipynb
@@ -17780,7 +17780,7 @@
     "stat_y = results_y.groupby(['Obs'])[predictor, 0].describe(percentiles=[.16, .5, .84])\n",
     "\n",
     "l_sd_y_pred = stat_y[0]['50%'] - stat_y[0]['16%']\n",
-    "t_sd_y_pred = stat_y[0]['16%'] - stat_y[0]['50%']\n",
+    "t_sd_y_pred = stat_y[0]['84%'] - stat_y[0]['50%']\n",
     "\n",
     "n_stat_y = len(stat_y[0]['50%'])"
    ]
@@ -18437,6 +18437,10 @@
    "execution_count": 36,
    "id": "4e518d57-5a48-45e1-bd22-dd02a8547a93",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
