--- a/Sapplementary_materials/05_est_biomass_&_RN_Tag_use_Sentinel _data/05_first_modelling/2019/Nootbooks/XGB_RN_est_Sentinel_2019_Tag_Cs_ver1.ipynb
+++ b/Sapplementary_materials/05_est_biomass_&_RN_Tag_use_Sentinel _data/05_first_modelling/2019/Nootbooks/XGB_RN_est_Sentinel_2019_Tag_Cs_ver1.ipynb
@@ -15502,7 +15502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -15516,7 +15516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
