Final simulation for Section 5

--- a/Sapplementary_materials/05_est_biomass_&_RN_Tag_use_Sentinel _data/05_estimation_unc/04_xgb_LN_Tag_Cs_Sentinel_2019.ipynb
+++ b/Sapplementary_materials/05_est_biomass_&_RN_Tag_use_Sentinel _data/05_estimation_unc/04_xgb_LN_Tag_Cs_Sentinel_2019.ipynb
@@ -273,208 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "consistent-mayor",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>LN_GS_cub_m</th>\n",
-       "      <th>LN_M_stem_kg_m2</th>\n",
-       "      <th>LN_M_stem_bark_kg_m2</th>\n",
-       "      <th>LN_M_crown_kg_m2</th>\n",
-       "      <th>LN_M_foliage_kg_m2</th>\n",
-       "      <th>LN_M_AG_kg_m2</th>\n",
-       "      <th>LN_Tag_Cs</th>\n",
-       "      <th>LN_Tag_Sr</th>\n",
-       "      <th>r2019B01</th>\n",
-       "      <th>r2019B02</th>\n",
-       "      <th>r2019B03</th>\n",
-       "      <th>r2019B04</th>\n",
-       "      <th>r2019B05</th>\n",
-       "      <th>r2019B06</th>\n",
-       "      <th>r2019B07</th>\n",
-       "      <th>r2019B08</th>\n",
-       "      <th>r2019B09</th>\n",
-       "      <th>r2019B10</th>\n",
-       "      <th>r2019B11</th>\n",
-       "      <th>r2019B12</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4.771</td>\n",
-       "      <td>1.792</td>\n",
-       "      <td>-0.211</td>\n",
-       "      <td>-0.261</td>\n",
-       "      <td>-2.040</td>\n",
-       "      <td>1.932</td>\n",
-       "      <td>-0.73</td>\n",
-       "      <td>2.58</td>\n",
-       "      <td>0.025483</td>\n",
-       "      <td>0.040910</td>\n",
-       "      <td>0.030628</td>\n",
-       "      <td>0.266210</td>\n",
-       "      <td>0.166299</td>\n",
-       "      <td>0.081316</td>\n",
-       "      <td>0.793351</td>\n",
-       "      <td>-0.733693</td>\n",
-       "      <td>0.532051</td>\n",
-       "      <td>-15.396488</td>\n",
-       "      <td>-11.262037</td>\n",
-       "      <td>0.731937</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5.808</td>\n",
-       "      <td>2.496</td>\n",
-       "      <td>-0.073</td>\n",
-       "      <td>0.392</td>\n",
-       "      <td>-0.139</td>\n",
-       "      <td>2.674</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>2.92</td>\n",
-       "      <td>0.024075</td>\n",
-       "      <td>0.038164</td>\n",
-       "      <td>0.027934</td>\n",
-       "      <td>0.183349</td>\n",
-       "      <td>0.102656</td>\n",
-       "      <td>0.052144</td>\n",
-       "      <td>0.735493</td>\n",
-       "      <td>-0.655456</td>\n",
-       "      <td>0.557000</td>\n",
-       "      <td>-16.012156</td>\n",
-       "      <td>-9.364664</td>\n",
-       "      <td>0.584920</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5.796</td>\n",
-       "      <td>2.546</td>\n",
-       "      <td>0.030</td>\n",
-       "      <td>0.501</td>\n",
-       "      <td>-0.030</td>\n",
-       "      <td>2.734</td>\n",
-       "      <td>0.78</td>\n",
-       "      <td>2.88</td>\n",
-       "      <td>0.022492</td>\n",
-       "      <td>0.038968</td>\n",
-       "      <td>0.026123</td>\n",
-       "      <td>0.184066</td>\n",
-       "      <td>0.099625</td>\n",
-       "      <td>0.050684</td>\n",
-       "      <td>0.751436</td>\n",
-       "      <td>-0.650575</td>\n",
-       "      <td>0.568148</td>\n",
-       "      <td>-13.609903</td>\n",
-       "      <td>-9.726108</td>\n",
-       "      <td>0.715177</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.826</td>\n",
-       "      <td>2.643</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.419</td>\n",
-       "      <td>-0.431</td>\n",
-       "      <td>2.785</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>2.72</td>\n",
-       "      <td>0.023742</td>\n",
-       "      <td>0.037811</td>\n",
-       "      <td>0.027390</td>\n",
-       "      <td>0.177221</td>\n",
-       "      <td>0.102540</td>\n",
-       "      <td>0.052198</td>\n",
-       "      <td>0.732404</td>\n",
-       "      <td>-0.648310</td>\n",
-       "      <td>0.544717</td>\n",
-       "      <td>-14.321650</td>\n",
-       "      <td>-10.457536</td>\n",
-       "      <td>0.730390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6.059</td>\n",
-       "      <td>2.643</td>\n",
-       "      <td>0.122</td>\n",
-       "      <td>0.647</td>\n",
-       "      <td>-0.386</td>\n",
-       "      <td>2.809</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>2.83</td>\n",
-       "      <td>0.022916</td>\n",
-       "      <td>0.037557</td>\n",
-       "      <td>0.025702</td>\n",
-       "      <td>0.183705</td>\n",
-       "      <td>0.101394</td>\n",
-       "      <td>0.050437</td>\n",
-       "      <td>0.754481</td>\n",
-       "      <td>-0.660382</td>\n",
-       "      <td>0.569112</td>\n",
-       "      <td>-13.934375</td>\n",
-       "      <td>-11.393335</td>\n",
-       "      <td>0.817430</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   LN_GS_cub_m  LN_M_stem_kg_m2  LN_M_stem_bark_kg_m2  LN_M_crown_kg_m2  \\\n",
-       "0        4.771            1.792                -0.211            -0.261   \n",
-       "1        5.808            2.496                -0.073             0.392   \n",
-       "2        5.796            2.546                 0.030             0.501   \n",
-       "3        5.826            2.643                 0.000             0.419   \n",
-       "4        6.059            2.643                 0.122             0.647   \n",
-       "\n",
-       "   LN_M_foliage_kg_m2  LN_M_AG_kg_m2  LN_Tag_Cs  LN_Tag_Sr  r2019B01  \\\n",
-       "0              -2.040          1.932      -0.73       2.58  0.025483   \n",
-       "1              -0.139          2.674       0.59       2.92  0.024075   \n",
-       "2              -0.030          2.734       0.78       2.88  0.022492   \n",
-       "3              -0.431          2.785       0.52       2.72  0.023742   \n",
-       "4              -0.386          2.809       0.22       2.83  0.022916   \n",
-       "\n",
-       "   r2019B02  r2019B03  r2019B04  r2019B05  r2019B06  r2019B07  r2019B08  \\\n",
-       "0  0.040910  0.030628  0.266210  0.166299  0.081316  0.793351 -0.733693   \n",
-       "1  0.038164  0.027934  0.183349  0.102656  0.052144  0.735493 -0.655456   \n",
-       "2  0.038968  0.026123  0.184066  0.099625  0.050684  0.751436 -0.650575   \n",
-       "3  0.037811  0.027390  0.177221  0.102540  0.052198  0.732404 -0.648310   \n",
-       "4  0.037557  0.025702  0.183705  0.101394  0.050437  0.754481 -0.660382   \n",
-       "\n",
-       "   r2019B09   r2019B10   r2019B11  r2019B12  \n",
-       "0  0.532051 -15.396488 -11.262037  0.731937  \n",
-       "1  0.557000 -16.012156  -9.364664  0.584920  \n",
-       "2  0.568148 -13.609903  -9.726108  0.715177  \n",
-       "3  0.544717 -14.321650 -10.457536  0.730390  \n",
-       "4  0.569112 -13.934375 -11.393335  0.817430  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Selecting main working parameters\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m select \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame(df, columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLN_GS_cub_m\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLN_M_stem_kg_m2\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLN_M_stem_bark_kg_m2\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLN_M_crown_kg_m2\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLN_M_foliage_kg_m2\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLN_M_AG_kg_m2\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLN_Tag_Cs\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLN_Tag_Sr\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m                                   \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B01\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B02\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B03\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B04\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B05\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B06\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B07\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B08\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B09\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B10\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B11\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2019B12\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Show the first five columns\u001b[39;00m\n\u001b[1;32m      6\u001b[0m select\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -17553,7 +17367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
